[Add] Project dockerization